--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,5 +9,11 @@
     </head>
     <body>
         {% block body %}{% endblock %}
+
+        {% block javascripts %}
+		
+        <script src='/js/script.js'></script>
+
+		{% endblock %}
     </body>
 </html>
